@@ -3,4 +3,4 @@
 daemon-config=config/daemon.properties
 
 # ITR navigation configuration file.
-navigation-config=config/itr-navigation.xml
+navigation-config=config/itr-mapping.xml  
