@@ -1,0 +1,28 @@
+<?xml version="1.0" encoding="utf-8"?>
+<xs:schema targetNamespace="http://idea-sense.com/itr-mapping"
+           elementFormDefault="qualified" 
+           xmlns="http://idea-sense.com/itr-mapping"
+           xmlns:mstns="http://idea-sense.com/itr-mapping"
+           xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  <xs:element name="ITR-mapping">
+    <xs:complexType>
+      <xs:sequence>
+        <xs:sequence>
+          <xs:element name="Companies">
+            <xs:complexType>
+              <xs:sequence>
+                <xs:element name="company" minOccurs="1">
+                  <xs:complexType>
+                    <xs:attribute name="name" type="xs:string" use="required" />
+                    <xs:attribute name="url" type="xs:anyURI" use="required" />
+                    <xs:attribute name="import" type="xs:string" use="optional" />
+                  </xs:complexType>
+                </xs:element>
+              </xs:sequence>
+            </xs:complexType>
+          </xs:element>
+        </xs:sequence>
+      </xs:sequence>
+    </xs:complexType>
+  </xs:element>
+</xs:schema>
