@@ -2,3 +2,4 @@
 1. ProtocolHandler, AbstractProtocolHandler and ProtocolConfiguration classes
 are added.
 2. Configuration layer completed.
+3, added schema for itr-mappming and navigation
